Fix: full width block scrollbar (#713)

--- a/assets/source/3.0/sass/blocks.scss
+++ b/assets/source/3.0/sass/blocks.scss
@@ -33,7 +33,7 @@
 
         &-full {
             position: relative;
-            width: calc(100vw - 15px); 
+            width: calc(100vw - var(--scrollbar, 15px));
             left: 50%;
             right: 50%;
             margin-left: -50vw;
